+ image not found / customizable images

--- a/todo.org
+++ b/todo.org
@@ -63,6 +63,7 @@
   - [X] Verbose.py
   - [X] Helpers.py
   - [ ] Gui.py
+    Need to make the image loader more flexible 
   - [ ] Reports.py
   - [ ] Validation.py
   - [ ] Data.py
