--- a/todo.org
+++ b/todo.org
@@ -66,7 +66,7 @@
   - [X] Reports.py
   - [X] Validation.py
   - [X] Data.py
-  - [ ] Filestream.py
+  - [X] Filestream.py
   - [ ] Unittests.py 
 * Teach Parth 
 ** File Structure 
